k8s/frontend.yaml
# /k8s/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: rag-finanzauto-frontend-service # Nombre que usará el Ingress para encontrarlo
  namespace: rag-finanzauto
spec:
  selector:
    app: rag-finanzauto-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rag-finanzauto-frontend
  namespace: rag-finanzauto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rag-finanzauto-frontend
  template:
    metadata:
      labels:
        app: rag-finanzauto-frontend
    spec:
      containers:
        - name: frontend-container
          image: yesfon/rag-finanzauto-frontend:v3 # Usamos la v3 que sabemos que existe
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config-volume
              mountPath: /etc/nginx/conf.d/default.conf # Monta la configuración
              subPath: nginx.conf
      volumes:
        - name: nginx-config-volume
          configMap:
            name: rag-frontend-nginx-conf # Apunta al ConfigMap que creamos
